--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
   <button class="btn">Змінити стиль</button>
 
-  <script src="1.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
