--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1 id="title">Ласкаво просимо!</h1>
 
   <ul class="menu">
-    <li class="menu-item">Головна</li>
+    <li class="menu-item">Головна сторінка</li>
     <li class="menu-item">Про нас</li>
     <li class="menu-item">Контакти</li>
   </ul>
