--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </ul>
 
   <button class="btn">Змінити стиль</button>
-
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
