--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Робота з DOM</title>
+  <style>
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
   <h1 id="title">Ласкаво просимо!</h1>
@@ -14,6 +19,7 @@
   </ul>
 
   <button class="btn">Змінити стиль</button>
+
   <script src="script.js" defer></script>
 </body>
 </html>
